Updated doc on rgeneric.

--- a/r-inla.org/doc/latent/rgeneric.tex
+++ b/r-inla.org/doc/latent/rgeneric.tex
@@ -34,6 +34,11 @@ following reasons:
     \texttt{num.threads=1} or some small number, as this may actually
     runs faster (and use much less memory).
 \end{enumerate}
+For MacOSX, there are further restrictions:
+\begin{itemize}
+\item You must run \texttt{R} from a Terminal and not use the GUI.
+\item Running the inla-program is verbose-mode is disabled.
+\end{itemize}
 Anyway, we still hope it would be useful.
 
 \section*{Defining a latent model in \texttt{R}}
