--- a/r-inla.org/doc/hyper/likelihood/sas.tex
+++ b/r-inla.org/doc/hyper/likelihood/sas.tex
@@ -8,7 +8,7 @@
 	 	 	 \item[ initial ] 0 
 	 	 	 \item[ fixed ] FALSE 
 	 	 	 \item[ prior ] loggamma 
-	 	 	 \item[ param ] 1 0.01 
+	 	 	 \item[ param ] 1 5e-05 
 	 	 	 \item[ to.theta ] \verb|function(x) log(x)| 
 	 	 	 \item[ from.theta ] \verb|function(x) exp(x)| 
 	 	 \end{description}
