Wrong default prior for the BYM model, should be the loggamma not normal. Thanks to MB.

--- a/r-inla.org/doc/hyper/latent/bym.tex
+++ b/r-inla.org/doc/hyper/latent/bym.tex
@@ -16,8 +16,8 @@
 	 	 \begin{description}
 	 	 	 \item[ name ] log spatial precision 
 	 	 	 \item[ short.name ] prec.spatial 
-	 	 	 \item[ prior ] normal 
-	 	 	 \item[ param ] 0 5e-05 
+	 	 	 \item[ prior ] loggamma 
+	 	 	 \item[ param ] 1 5e-04 
 	 	 	 \item[ initial ] 4 
 	 	 	 \item[ fixed ] FALSE 
 	 	 	 \item[ to.theta ] \verb|function(x) log(x)| 
