--- a/r-inla.org/doc/hyper/latent/ar.tex
+++ b/r-inla.org/doc/hyper/latent/ar.tex
@@ -28,7 +28,7 @@
 	 	 	 \item[ name ] pacf2 
 	 	 	 \item[ short.name ] pacf2 
 	 	 	 \item[ initial ] 0 
-	 	 	 \item[ fixed ] TRUE 
+	 	 	 \item[ fixed ] FALSE 
 	 	 	 \item[ prior ] none 
 	 	 	 \item[ param ]  
 	 	 	 \item[ to.theta ] \verb|function(x) log((1+x)/(1-x))| 
@@ -39,7 +39,7 @@
 	 	 	 \item[ name ] pacf3 
 	 	 	 \item[ short.name ] pacf3 
 	 	 	 \item[ initial ] 0 
-	 	 	 \item[ fixed ] TRUE 
+	 	 	 \item[ fixed ] FALSE 
 	 	 	 \item[ prior ] none 
 	 	 	 \item[ param ]  
 	 	 	 \item[ to.theta ] \verb|function(x) log((1+x)/(1-x))| 
@@ -50,7 +50,7 @@
 	 	 	 \item[ name ] pacf4 
 	 	 	 \item[ short.name ] pacf4 
 	 	 	 \item[ initial ] 0 
-	 	 	 \item[ fixed ] TRUE 
+	 	 	 \item[ fixed ] FALSE 
 	 	 	 \item[ prior ] none 
 	 	 	 \item[ param ]  
 	 	 	 \item[ to.theta ] \verb|function(x) log((1+x)/(1-x))| 
@@ -61,7 +61,7 @@
 	 	 	 \item[ name ] pacf5 
 	 	 	 \item[ short.name ] pacf5 
 	 	 	 \item[ initial ] 0 
-	 	 	 \item[ fixed ] TRUE 
+	 	 	 \item[ fixed ] FALSE 
 	 	 	 \item[ prior ] none 
 	 	 	 \item[ param ]  
 	 	 	 \item[ to.theta ] \verb|function(x) log((1+x)/(1-x))| 
@@ -72,7 +72,7 @@
 	 	 	 \item[ name ] pacf6 
 	 	 	 \item[ short.name ] pacf6 
 	 	 	 \item[ initial ] 0 
-	 	 	 \item[ fixed ] TRUE 
+	 	 	 \item[ fixed ] FALSE 
 	 	 	 \item[ prior ] none 
 	 	 	 \item[ param ]  
 	 	 	 \item[ to.theta ] \verb|function(x) log((1+x)/(1-x))| 
@@ -83,7 +83,7 @@
 	 	 	 \item[ name ] pacf7 
 	 	 	 \item[ short.name ] pacf7 
 	 	 	 \item[ initial ] 0 
-	 	 	 \item[ fixed ] TRUE 
+	 	 	 \item[ fixed ] FALSE 
 	 	 	 \item[ prior ] none 
 	 	 	 \item[ param ]  
 	 	 	 \item[ to.theta ] \verb|function(x) log((1+x)/(1-x))| 
@@ -94,7 +94,7 @@
 	 	 	 \item[ name ] pacf8 
 	 	 	 \item[ short.name ] pacf8 
 	 	 	 \item[ initial ] 0 
-	 	 	 \item[ fixed ] TRUE 
+	 	 	 \item[ fixed ] FALSE 
 	 	 	 \item[ prior ] none 
 	 	 	 \item[ param ]  
 	 	 	 \item[ to.theta ] \verb|function(x) log((1+x)/(1-x))| 
@@ -105,7 +105,7 @@
 	 	 	 \item[ name ] pacf9 
 	 	 	 \item[ short.name ] pacf9 
 	 	 	 \item[ initial ] 0 
-	 	 	 \item[ fixed ] TRUE 
+	 	 	 \item[ fixed ] FALSE 
 	 	 	 \item[ prior ] none 
 	 	 	 \item[ param ]  
 	 	 	 \item[ to.theta ] \verb|function(x) log((1+x)/(1-x))| 
@@ -116,7 +116,7 @@
 	 	 	 \item[ name ] pacf10 
 	 	 	 \item[ short.name ] pacf10 
 	 	 	 \item[ initial ] 0 
-	 	 	 \item[ fixed ] TRUE 
+	 	 	 \item[ fixed ] FALSE 
 	 	 	 \item[ prior ] none 
 	 	 	 \item[ param ]  
 	 	 	 \item[ to.theta ] \verb|function(x) log((1+x)/(1-x))| 
