--- a/r-inla.org/doc/hyper/latent/ar.tex
+++ b/r-inla.org/doc/hyper/latent/ar.tex
@@ -131,5 +131,6 @@
 	 \item[ n.div.by ]  
 	 \item[ n.required ] FALSE 
 	 \item[ set.default.values ] FALSE 
+	 \item[ status ] experimental 
 	 \item[ pdf ] ar 
 \end{description}
