Fixed a missprint in the doc of plot.inla.

--- a/r-inla.org/doc/hyper/group/rw1.tex
+++ b/r-inla.org/doc/hyper/group/rw1.tex
@@ -7,8 +7,8 @@
 	 	 	 \item[ short.name ] prec 
 	 	 	 \item[ prior ] loggamma 
 	 	 	 \item[ param ] 1 5e-05 
-	 	 	 \item[ initial ] 4 
-	 	 	 \item[ fixed ] FALSE 
+	 	 	 \item[ initial ] 0 
+	 	 	 \item[ fixed ] TRUE 
 	 	 	 \item[ to.theta ] \verb|function(x) log(x)| 
 	 	 	 \item[ from.theta ] \verb|function(x) exp(x)| 
 	 	 \end{description}
