--- a/r-inla.org/doc/hyper/likelihood/sas.tex
+++ b/r-inla.org/doc/hyper/likelihood/sas.tex
@@ -18,8 +18,8 @@
 	 	 	 \item[ short.name ] skew 
 	 	 	 \item[ initial ] 0 
 	 	 	 \item[ fixed ] FALSE 
-	 	 	 \item[ prior ] normal 
-	 	 	 \item[ param ] 0 25 
+	 	 	 \item[ prior ] sasprior 
+	 	 	 \item[ param ] 10 
 	 	 	 \item[ to.theta ] \verb|function(x) x| 
 	 	 	 \item[ from.theta ] \verb|function(x) x| 
 	 	 \end{description}
@@ -29,8 +29,8 @@
 	 	 	 \item[ short.name ] kurt 
 	 	 	 \item[ initial ] 3 
 	 	 	 \item[ fixed ] FALSE 
-	 	 	 \item[ prior ] normal 
-	 	 	 \item[ param ] 3 100 
+	 	 	 \item[ prior ] none 
+	 	 	 \item[ param ]  
 	 	 	 \item[ to.theta ] \verb|function(x) (x)| 
 	 	 	 \item[ from.theta ] \verb|function(x) (x)| 
 	 	 \end{description}
