Generalized the cbinomial likelihood. Added proptype for a gaussianwindow likelihood, but this is currently disabled and not yet finished.

--- a/r-inla.org/doc/likelihood/binomial.tex
+++ b/r-inla.org/doc/likelihood/binomial.tex
@@ -30,9 +30,11 @@ and the probability $p$ is linked to the linear predictor by
     p(\eta) = \frac{\exp(\eta)}{1+\exp(\eta)}
 \end{displaymath}
 
-\subsection*{Hyperparameters}
-
+\subsubsection*{Hyperparameters}
 None.
+
+\subsubsection*{Hyperparameter spesification and default values}
+\input{../hyper/likelihood/binomial.tex}
 
 \subsection*{Specification}
 
