--- a/r-inla.org/doc/hyper/likelihood/cbinomial.tex
+++ b/r-inla.org/doc/hyper/likelihood/cbinomial.tex
@@ -2,6 +2,7 @@
 	\item[hyper]\ 
 	 \item[ survival ] FALSE 
 	 \item[ discrete ] TRUE 
-	 \item[ link ] default logit probit cloglog log 
+	 \item[ link ] default logit probit cloglog 
+	 \item[ status ] experimental 
 	 \item[ pdf ] cbinomial 
 \end{description}
